# lever-action

./: .gitignore  AGENTS.md  AppxManifest.xml  CHANGELOG.md  README.md  TODO.md  audit.py  dandy_settings.py  generate_icon.py  justfile  lever_action.spec  main.py  pyproject.toml  temp_manifest.ps1  winget-submission.yaml
.github/workflows/: winget.yml
hooks/: rthook_pythonnet.py
installer/: build_msi.ps1  setup.iss
src/lever_action/: settings.json
src/lever_action/services/: chat_service.py
src/lever_action/static/css/: style.css
src/lever_action/static/js/: app.js
src/lever_action/storage/: history.py  sessions.py  settings.py
src/lever_action/templates/: index.tpl
tests/: test_app.py
tests/test_services/: test_chat_service.py
tests/test_storage/: test_chat_entry.py  test_history.py  test_sessions.py  test_settings.py
winget/: README.md  default.yaml  installer.yaml  license.yaml
winget-submission/manifests/n/NathanJohnson/LeverAction/0.1.0/: NathanJohnson.LeverAction.installer.yaml  NathanJohnson.LeverAction.locale.en-US.yaml  NathanJohnson.LeverAction.yaml
